@@ -306,6 +306,9 @@ sub do_idle {
    $idle=Gtk->idle_add(\&idle) unless $idle;
 }
 
+eval "use Gtk::Keysyms ()";
+$Gtk::Keysyms{Tab} ||= 0xFF09;
+
 sub inputline {
    my $e = new Gtk::Entry;
    $e->set_text("");
@@ -318,8 +321,7 @@ sub inputline {
    $e->signal_connect("key_press_event",sub {
       undef $last_arg;
       do_idle;
-      # GDK_Tab = 0xFF09
-      if ($_[1]->{keyval} == 0xFF09) {
+      if ($_[1]->{keyval} == $Gtk::Keysyms{Tab}) {
           $_[0]->signal_emit_stop_by_name('key_press_event');
          do_completion;
          1;
